unpackaged/main/default/objects/Supplier_Credit_Queue__c/Supplier_Credit_Queue__c.object-meta.xml
<CustomObject>
    <label>Supplier Credit Queue</label>
    <nameField>
        <displayFormat>SQ-{00000}</displayFormat>
        <label>Supplier Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Credit Queue</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>