unpackaged/main/default/objects/Supplier_Credit_Queue__c/fields/Credit_Reference__c.field-meta.xml
<CustomField>
    <fullName>Credit_Reference__c</fullName>
    <label>Credit Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>