unpackaged/main/default/objects/Supplier_Credit_Queue__c/fields/Linked_RMA__c.field-meta.xml
<CustomField>
    <fullName>Linked_RMA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked RMA</label>
    <referenceTo>Return_Merchandise_Authorization__c</referenceTo>
    <relationshipLabel>Supplier Credit Queue</relationshipLabel>
    <relationshipName>Supplier_Credit_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>