unpackaged/main/default/objects/Supplier_Credit_Queue__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes/Justification</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>