unpackaged/main/default/objects/Supplier_Credit_Queue__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Supplier Credit Queue</relationshipLabel>
    <relationshipName>Supplier_Credit_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>