unpackaged/main/default/objects/Supplier_Credit_Queue__c/fields/Supplier_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manual credit memo of type supplier</description>
    <label>Supplier Credit Memo</label>
    <referenceTo>Manual_Credit_Memo__c</referenceTo>
    <relationshipLabel>Supplier Credit Queue</relationshipLabel>
    <relationshipName>Supplier_Credit_Queue</relationshipName>
    <type>Lookup</type>
</CustomField>