unpackaged/main/default/objects/Supplier_Credit_Queue__c/fields/Timestamp_Processed__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Processed__c</fullName>
    <label>Timestamp: Processed</label>
    <type>DateTime</type>
</CustomField>