unpackaged/main/default/objects/Supplier_Credit_Queue__c/fields/Timestamp_Received__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Received__c</fullName>
    <label>Timestamp: Received</label>
    <type>DateTime</type>
</CustomField>